--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ pydub==0.25.1
 Pygments==2.17.2
 pyparsing==3.1.1
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 python-multipart==0.0.6
 pytz==2023.3.post1
 PyYAML==6.0.1
@@ -52,6 +53,7 @@ semantic-version==2.10.0
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.0
+SQLAlchemy==2.0.25
 starlette==0.32.0.post1
 tomlkit==0.12.0
 toolz==0.12.0
